--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,7 +1,7 @@
 .section {
   width: 540px;
   margin: 0 auto;
-  padding: 30px;
+  padding: 20px 30px;
   outline: 1px solid;
   background-color: #e9e9e9;
   margin-bottom: 20px;
@@ -13,4 +13,5 @@
   font-size: 32px;
   text-align: center;
   text-shadow: 2px 2px 3px grey, 2px 2px 1px red;
+  margin-bottom: 8px;
 }
