--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,16 +1,17 @@
-.contactWrapper {
+.wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  outline: 1px solid grey;
-  margin-bottom: 10px;
-  padding: 4px 16px;
-  border-radius: 10px;
-  box-shadow: -4px -4px 6px #fff, 8px 8px 16px -8px #eb5757;
+  /* margin: 20px 0px 0px; */
 }
 
-.icon {
-  margin-right: 16px;
+.input {
+  width: 240px;
+  height: 36px;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 8px;
+  margin-right: 14px;
+  box-shadow: -5px -5px 9px #fff inset, 2px 2px 18px -10px #000 inset;
 }
 
 .button {
@@ -25,6 +26,7 @@
   font-weight: 600;
   border-radius: 10px;
   border: none;
+  margin-left: 20px;
   background: #eb5757;
   background: -webkit-linear-gradient(to right, #eb5757, #000000);
   background: linear-gradient(to right, #eb5757, #000000);
@@ -47,5 +49,5 @@
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
   -o-transform: scale(1.1);
-  color: red;
+  color: blue;
 }
