--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -7,6 +7,7 @@
   gap: 12px;
   margin-bottom: 10px;
   border-radius: 10px;
+  box-shadow: -4px -4px 6px #fff, 8px 8px 16px -8px #eb5757;
 }
 
 .labelWrapper {
